syntax = "proto3";

option go_package = ".;server";
package status;

service Maintainer {
    rpc Register(RegisterRequest) returns (RegisterReply) {}
    rpc ChangeStatus(stream StatusRequest) returns (stream StatusReply) {}
    rpc Query(stream QueryRequest) returns (stream QueryReply) {}
    rpc Invalid(stream InvalidRequest) returns (stream InvalidReply) {}
}

message RegisterRequest {
    string Name = 1;
    string Host = 2;
}

message RegisterReply {
    int32 Code = 1;
    string Msg = 2;
}

message StatusRequest {
    string Token = 1;
    string Name = 2;
}

message StatusReply {
    string Token = 1;
    string Host = 2;
}

message QueryRequest {
    string Token = 1;
}

message QueryReply {
    string Token = 1;
    string Host = 2;
}

message InvalidRequest {
    string name = 1;
}

message InvalidReply {
    string Token = 1;
}